--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "express": "^4.17.2",
-    "got": "^11.8.3"
+    "got": "^11.8.3",
+    "pdfkit": "^0.13.0"
   }
 }
